[metadata]
name = replay_processing
author = Spencer Krum
author-email = nibz@spencerkrum.com
summary = Processing sc2 replay files
description-file = README.rst
home-page = https://github.com/nibalizer/replay_processing
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    replay_processing


[entry_points]
console_scripts =
    replayscan = replay_processing.replayscan:main
    build-order-csv-gen = replay_processing.build_order_csv_gen:main
    build-order-clustering = replay_processing.build_order_clustering:main
